# ocr-dashboard-v3

./: .coverage  .env.example  .gitignore  .snyk  AGENTS.md  Makefile  README.md  coverage.xml  ocr-dashboard.service  pyproject.toml  requirements.txt  run.py  sonar-project.properties
.agent/workflows/: create-issue.md
.github/workflows/: daily-repo-status.lock.yml  sonarcloud.yml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  requests.py
app/routes/: __init__.py  dashboard.py  limits.py  profiles.py  settings.py
app/services/: __init__.py  cleanup.py  pause_scheduler.py  process.py  profiles.py  remote_config.py  remote_deployment.py  source_resolver.py  update_counts.py
app/utils/: __init__.py  activity_logger.py  db.py  error_handlers.py  log_utils.py  security.py
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: SONARQUBE_SETUP.md
scripts/: auto_sync_runtime.sh  cleanup_artifacts.py  commit_reminder.sh  create_missing_profiles.py  cron_cleanup_artifacts.sh  farm_conductor.py  farm_monitor_session.py  folder_indexer.py  install_folder_indexer.sh  login_profile.py  monitor_farm_health.py  mount_nas_tailscale.sh  precheck_limits.py  push_retry.sh  run_migrations.py  setup.sh  setup_source_mounts.sh  sonar.sh  start_web.sh  update_counts.sh  update_fstab_tailscale.sh  verify_source_directories.py  webshare_ip_sync.py  webshare_proxy_sync.py
scripts/migrations/: 001_limit_checks_table.sql  002_add_json_structure.sql  003_normalize_schema.sql  004_system_activity_log.sql  005_farm_health_monitoring.sql  006_error_traces_table.sql  007_db_artifacts_and_state.sql  008_source_path_stats.sql  009_source_path_scan_queue.sql  010_source_path_notify.sql  011_source_path_scan_queue_filters.sql  012_fix_empty_folder_detection.sql  013_ocr_raw_texts_base.sql  014_programmatic_tables_migration.sql  add_execution_mode_column.sql
scripts/setup/: QUICKSTART.md  README.md  setup_arch.sh  setup_config.example.ps1  setup_config.example.sh  setup_ubuntu.sh  setup_windows.ps1
scripts/systemd/: ocr-dashboard-auto-commit.service  ocr-dashboard-auto-commit.timer  ocr-dashboard-auto-sync.service  ocr-dashboard-auto-sync.timer  ocr-dashboard-commit-reminder.service  (+9 more)
static/: dashboard_v2.css
templates/: dashboard_v2.html
tests/: test_deployment_syntax.py  test_host_load.py  test_remote_hosts.py  test_restart_all_hosts.py  test_source_path_compose.py  test_source_resolver.py
(+55 files in other folders)
